--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/auth": "^21.0.0",
+    "@react-native-firebase/firestore": "^21.0.0",
+    "@react-native-firebase/messaging": "^21.0.0",
+    "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "formik": "^2.4.6",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-safe-area-context": "^4.11.1",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0",
+    "reactfire": "^4.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
